# labarchives-api

./: .gitignore  .mockenv  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  conftest.py  main.py  new_conftest.py  pterm.py  pyproject.toml  pyrightconfig.json  pytest.ini  test_integration.py  test_main.py  test_unit.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  format.yml  integration_tests.yml  lint.yml  pages.yml  publish.yml  python_check.yml  typecheck.yml  unit_tests.yml
docs/_build/html/: .buildinfo  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/labapi/: client.html  user.html
docs/_build/html/_modules/labapi/entry/: attachment.html  collection.html  comment.html
docs/_build/html/_modules/labapi/entry/entries/: attachment.html  base.html  text.html  widget.html
docs/_build/html/_modules/labapi/tree/: collection.html  directory.html  mixins.html  notebook.html  page.html
docs/_build/html/_modules/labapi/util/: behavior.html  extract.html  index.html  notebookinit.html  part_type.html  path.html
docs/_build/html/_sources/: faq.rst.txt  index.rst.txt
docs/_build/html/_sources/examples/: csv_table.rst.txt  folder_download.rst.txt  index.rst.txt  json_sync.rst.txt
docs/_build/html/_sources/guide/: auth.rst.txt  clearing_cache.rst.txt  index.rst.txt  paths.rst.txt
docs/_build/html/_sources/quick_start/: creating_pages.rst.txt  deleting.rst.txt  installation.rst.txt  uploading_files.rst.txt  writing_rich_text.rst.txt
docs/_build/html/_sources/reference/: index.rst.txt
docs/_build/html/_static/: pygments.css
docs/_build/html/_static/styles/: breeze.css
docs/_build/html/examples/: csv_table.html  folder_download.html  index.html  json_sync.html
docs/_build/html/guide/: api_calls.html  auth.html  clearing_cache.html  entries.html  index.html  index_access.html  json_entries.html  paths.html
docs/_build/html/quick_start/: copying.html  creating_pages.html  deleting.html  first_calls.html  index.html  installation.html  navigating.html  uploading_files.html  writing_rich_text.html
docs/_build/html/reference/: index.html
docs/source/: api-reference.rst  conf.py  faq.rst  index.rst  labapi.entry.entries.rst  labapi.entry.rst  labapi.rst  labapi.tree.rst  labapi.util.rst  modules.rst  quick-reference.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/examples/: csv_table.rst  folder_download.rst  index.rst  json_sync.rst
docs/source/guide/: api_calls.rst  architecture.rst  auth.rst  clearing_cache.rst  contributing.rst  entries.rst  exceptions.rst  index.rst  index_access.rst  integration_design.rst  json_entries.rst  limitations.rst  paths.rst
docs/source/guides/: attachments.rst  authentication.rst  creating-content.rst  entry-types.rst  installation.rst  json-pattern.rst  navigation.rst  quickstart.rst  reading-data.rst  troubleshooting.rst  workflows.rst
docs/source/quick_start/: copying.rst  creating_pages.rst  deleting.rst  first_calls.rst  index.rst  installation.rst  navigating.rst  tutorial.rst  uploading_files.rst  writing_rich_text.rst
docs/source/reference/: index.rst
examples/csv_table/: README.md  csv_table.py  pyproject.toml  sample_data.csv
examples/folder_download/: README.md  folder_download.py  populate_notebook.py  pyproject.toml
examples/json_sync/: README.md  json_sync.py  pyproject.toml
examples/json_sync/sample_data/: config.json  results.json
examples/model_logging/: README.md  model_logger.py  pyproject.toml  run_test.py
examples/model_logging/test_data/: metrics.json  results.csv
examples/notebook_logging/: README.md  example.ipynb  notebook_logger.py  pyproject.toml
examples/notebook_logging/.ipynb_checkpoints/: example-checkpoint.ipynb  notebook_logger-checkpoint.py
src/: __init__.py  client.py  collections.py  user.py
src/entry/: attachment.py  collection.py  entries.py
src/entry/entries/: __init__.py  attachment.py  base.py  text.py  widget.py
src/labapi/: __init__.py  browser.py  client.py  exceptions.py  test_client.py  test_user.py  user.py
src/labapi/emulator/: __init__.py  __main__.py  backend.py  cli.py  records.py  server.py  xml.py
src/labapi/entry/: __init__.py  attachment.py  collection.py  comment.py  json_data.py  test_attachment.py  test_collection.py
src/labapi/entry/entries/: __init__.py  attachment.py  base.py  test_attachment.py  test_base.py  test_text.py  test_widget.py  text.py  unknown.py  widget.py
src/labapi/tree/: __init__.py  collection.py  directory.py  mixins.py  notebook.py  page.py  test_collection.py  test_directory.py  test_mixins.py  test_notebook.py  test_page.py
src/labapi/util/: __init__.py  behavior.py  browser.py  env.py  extract.py  index.py  notebookinit.py  part_type.py  path.py  test_behavior.py  test_extract.py  test_index.py  test_notebookinit.py  test_part_type.py  test_path.py  types.py  validation.py
src/labarchives_api/: __init__.py  client.py  config.py  utils.py
src/tree/: __init__.py  collection.py  directory.py  mixins.py  notebook.py  notebooks.py  page.py
src/util/: __init__.py  extract.py  index.py  notebookinit.py
tests/: __init__.py  _labapi_mocks.py  conftest.py  plan.md  test_api.py  test_browser.py  test_client.py  test_entries_for_page.py  test_entry.json  test_imports.py  test_integration.py  test_unit.py  test_user.py
tests/entry/: __init__.py  test_attachment.py  test_collection.py
tests/entry/entries/: __init__.py  test_attachment.py  test_base.py  test_text.py  test_widget.py
tests/examples/: __init__.py  test_csv_table.py  test_folder_download.py  test_json_sync.py
tests/tree/: __init__.py  test_collection.py  test_directory.py  test_mixins.py  test_notebook.py  test_page.py
tests/util/: __init__.py  test_behavior.py  test_extract.py  test_index.py  test_notebookinit.py  test_path.py  test_validation.py
