[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labapi"
dynamic = ["version"]
description = "A Python client for the LabArchives API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "CC0-1.0" }
authors = [
  { name = "Christoph Li", email = "christoph.li@nih.gov" },
  { name = "Joshua Lawrimore", email = "josh.lawrimore@nih.gov"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=46.0.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
builtin-auth = [
    "selenium>=4.39.0",
    "installed-browsers>=0.1.5"
]
dotenv = [
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.406",
    "radon>=6.0.1",
    "ruff>=0.14.11",
    "types-lxml>=2026.1.1",
    "pre-commit>=4.5.1",
    "sphinx>=9.1.0",
    "sphinx-breeze-theme>=0.13.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--cov=labapi --cov-report=term-missing"

[tool.ruff.lint]
extend-select = ["A", "ARG", "B", "C4", "C90", "D", "I", "ICN", "INP", "PIE", "PLR0912", "PT", "PTH", "RET", "RUF", "SIM", "UP"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 8

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"docs/source/conf.py" = ["INP001"]
"examples/**/*.py" = ["PLR0912"]
"examples/notebook_logging/notebook_logger.py" = ["INP001"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
labapi = { workspace = true }
